snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-sources.jar.sha1
1a57c4e2df46025eea645c78d84106a2991a7b5a